# datalab-api

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  README.md  README.rst  pyproject.toml
api/routers/: deployments.py  jupyters.py  kafka.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
tests/: __init__.py  test_datalab_api.py
