[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "datalab_api"
version = "0.1.0"
description = "DataLab API to create environments in a K8s cluster"
readme = "README.rst"
authors = [
  {name = "Aida Palacio Hoz", email = "aidaph@ifca.unican.es"}
]
maintainers = [
  {name = "Aida Palacio Hoz", email = "aidaph@ifca.unican.es"}
]
classifiers = [

]
license = {text = "Apache Software License 2.0"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/IFCA-datalab/datalab-api/issues"
changelog = "https://github.com/IFCA-datalab/datalab-api/blob/master/changelog.md"
homepage = "https://github.com/IFCA-datalab/datalab-api"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

